# vigicrues

./: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
