[workspace]
members = [".", "cli"]

[workspace.package]
edition = "2024"

[package]
name = "vigicrues"
version = "0.1.0"
edition.workspace = true
license = "MIT"
description = "Retrieve vigicrues.fr informations"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "serde"]

[dependencies.reqwest]
version = "0.13"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies.tokio]
version = "1.26"
features = ["macros", "rt-multi-thread"]
